[package]
name = "hangman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.3"
text_io = "0.1.12"
